--- a/main/experiment/trial_2/trial_dt_2.ipynb
+++ b/main/experiment/trial_2/trial_dt_2.ipynb
@@ -29,9 +29,9 @@
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df_home_data_test = pd.read_csv('../../data/trial_3/home_data_predict_dt.csv')\n",
-    "df_home_priority = pd.read_csv('../../data/trial_3/home_priority.csv')\n",
-    "date_time_group = pd.read_csv('../../data/trial_3/date_time_group.csv')"
+    "df_home_data_test = pd.read_csv('../../../data/trial_2/home_data_predict_dt.csv')\n",
+    "df_home_priority = pd.read_csv('../../../data/trial_2/home_priority.csv')\n",
+    "date_time_group = pd.read_csv('../../../data/trial_2/date_time_group.csv')"
    ]
   },
   {
@@ -77,66 +77,66 @@
        "      <th>0</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>very hot</td>\n",
+       "      <td>cold</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>01:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>early morning</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24</td>\n",
        "      <td>1880.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>hot</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>03:00:00</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>midnight</td>\n",
-       "      <td>4</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1337.0</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>early morning</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1880.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>hot</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>06:00:00</td>\n",
        "      <td>07:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>6</td>\n",
-       "      <td>51</td>\n",
-       "      <td>1766.0</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>13</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1304.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>low hot</td>\n",
+       "      <td>cold</td>\n",
        "      <td>2018-01-01</td>\n",
+       "      <td>09:00:00</td>\n",
        "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
        "      <td>morning</td>\n",
-       "      <td>10</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1582.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1766.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AC</td>\n",
        "      <td>100</td>\n",
-       "      <td>low cold</td>\n",
+       "      <td>low hot</td>\n",
        "      <td>2018-01-01</td>\n",
-       "      <td>14:00:00</td>\n",
-       "      <td>15:00:00</td>\n",
-       "      <td>afternoon</td>\n",
-       "      <td>14</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1872.0</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1702.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -144,18 +144,18 @@
       ],
       "text/plain": [
        "  device  room weather_type        date from_time   to_time           time  \\\n",
-       "0     AC   100     very hot  2018-01-01  00:00:00  01:00:00       midnight   \n",
-       "1     AC   100          hot  2018-01-01  03:00:00  04:00:00       midnight   \n",
-       "2     AC   100          hot  2018-01-01  06:00:00  07:00:00  early morning   \n",
-       "3     AC   100      low hot  2018-01-01  10:00:00  11:00:00        morning   \n",
-       "4     AC   100     low cold  2018-01-01  14:00:00  15:00:00      afternoon   \n",
+       "0     AC   100         cold  2018-01-01  04:00:00  05:00:00  early morning   \n",
+       "1     AC   100      low hot  2018-01-01  05:00:00  06:00:00  early morning   \n",
+       "2     AC   100      low hot  2018-01-01  07:00:00  08:00:00        morning   \n",
+       "3     AC   100         cold  2018-01-01  09:00:00  10:00:00        morning   \n",
+       "4     AC   100      low hot  2018-01-01  09:00:00  10:00:00        morning   \n",
        "\n",
        "   no_of_people  time_stayed_mins   power  \n",
-       "0             4                 4  1880.0  \n",
-       "1             4                54  1337.0  \n",
-       "2             6                51  1766.0  \n",
-       "3            10                23  1582.0  \n",
-       "4            14                39  1872.0  "
+       "0             6                24  1880.0  \n",
+       "1             0                 0  1880.0  \n",
+       "2            13                38  1304.0  \n",
+       "3            14                 7  1766.0  \n",
+       "4            10                26  1702.0  "
       ]
      },
      "execution_count": 3,
@@ -464,125 +464,125 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>4923</th>\n",
+       "      <td>Television</td>\n",
+       "      <td>118</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>5207</th>\n",
        "      <td>Television</td>\n",
        "      <td>119</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>6</td>\n",
+       "      <td>31</td>\n",
+       "      <td>284.0</td>\n",
+       "      <td>229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>107</td>\n",
        "      <td>low cold</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>201.0</td>\n",
-       "      <td>204</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>7</td>\n",
+       "      <td>27</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4133</th>\n",
-       "      <td>Television</td>\n",
-       "      <td>115</td>\n",
+       "      <th>3061</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>111</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>13</td>\n",
+       "      <td>56</td>\n",
+       "      <td>264.0</td>\n",
+       "      <td>253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3823</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>114</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2279</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>108</td>\n",
+       "      <td>hot</td>\n",
+       "      <td>2018-01-14</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>13</td>\n",
+       "      <td>43</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>954</th>\n",
+       "      <td>Refridgerator</td>\n",
+       "      <td>103</td>\n",
        "      <td>very hot</td>\n",
        "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>11</td>\n",
-       "      <td>33</td>\n",
-       "      <td>220.0</td>\n",
-       "      <td>234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>100</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>14</td>\n",
-       "      <td>40</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>246</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3554</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>113</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
+       "      <td>23:00:00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>midnight</td>\n",
        "      <td>9</td>\n",
        "      <td>47</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>100</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>4</td>\n",
-       "      <td>22</td>\n",
-       "      <td>259.0</td>\n",
-       "      <td>252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2541</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>109</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>10</td>\n",
-       "      <td>20</td>\n",
-       "      <td>229.0</td>\n",
-       "      <td>252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1540</th>\n",
-       "      <td>Refridgerator</td>\n",
-       "      <td>105</td>\n",
-       "      <td>low hot</td>\n",
-       "      <td>2018-01-14</td>\n",
-       "      <td>21:00:00</td>\n",
-       "      <td>22:00:00</td>\n",
-       "      <td>night</td>\n",
-       "      <td>9</td>\n",
-       "      <td>47</td>\n",
-       "      <td>120.0</td>\n",
-       "      <td>258</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>271</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             device  room weather_type        date from_time   to_time   time  \\\n",
-       "5207     Television   119     low cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "4133     Television   115     very hot  2018-01-14  21:00:00  22:00:00  night   \n",
-       "193   Refridgerator   100         cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "3554  Refridgerator   113    very cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "192   Refridgerator   100    very cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "2541  Refridgerator   109    very cold  2018-01-14  21:00:00  22:00:00  night   \n",
-       "1540  Refridgerator   105      low hot  2018-01-14  21:00:00  22:00:00  night   \n",
+       "             device  room weather_type        date from_time   to_time  \\\n",
+       "4923     Television   118          hot  2018-01-14  23:00:00  00:00:00   \n",
+       "5207     Television   119          hot  2018-01-14  23:00:00  00:00:00   \n",
+       "2001  Refridgerator   107     low cold  2018-01-14  23:00:00  00:00:00   \n",
+       "3061  Refridgerator   111    very cold  2018-01-14  23:00:00  00:00:00   \n",
+       "3823  Refridgerator   114    very cold  2018-01-14  23:00:00  00:00:00   \n",
+       "2279  Refridgerator   108          hot  2018-01-14  23:00:00  00:00:00   \n",
+       "954   Refridgerator   103     very hot  2018-01-14  23:00:00  00:00:00   \n",
        "\n",
-       "      no_of_people  time_stayed_mins  power  priorities  \n",
-       "5207             4                 3  201.0         204  \n",
-       "4133            11                33  220.0         234  \n",
-       "193             14                40  116.0         246  \n",
-       "3554             9                47  257.0         252  \n",
-       "192              4                22  259.0         252  \n",
-       "2541            10                20  229.0         252  \n",
-       "1540             9                47  120.0         258  "
+       "          time  no_of_people  time_stayed_mins  power  priorities  \n",
+       "4923  midnight            10                10  294.0         229  \n",
+       "5207  midnight             6                31  284.0         229  \n",
+       "2001  midnight             7                27  145.0         241  \n",
+       "3061  midnight            13                56  264.0         253  \n",
+       "3823  midnight             0                 0  143.0         253  \n",
+       "2279  midnight            13                43  166.0         265  \n",
+       "954   midnight             9                47  153.0         271  "
       ]
      },
      "execution_count": 9,
@@ -604,7 +604,7 @@
     "df_home_data_test['action'] = actions\n",
     "df_home_data_test['savings'] = savings\n",
     "\n",
-    "df_home_data_test.to_csv('../../data/trial_3/final_output_dt.csv', index=False)"
+    "df_home_data_test.to_csv('../../../data/trial_2/final_output_dt.csv', index=False)"
    ]
   }
  ],
