--- a/main/experiment/trial_2/trial_mlr_2.ipynb
+++ b/main/experiment/trial_2/trial_mlr_2.ipynb
@@ -29,9 +29,9 @@
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df_home_data_test = pd.read_csv('../../data/trial_2/home_data_predict_dt.csv')\n",
-    "df_home_priority = pd.read_csv('../../data/trial_2/home_priority.csv')\n",
-    "date_time_group = pd.read_csv('../../data/trial_2/date_time_group.csv')"
+    "df_home_data_test = pd.read_csv('../../../data/trial_2/home_data_predict_mlr.csv')\n",
+    "df_home_priority = pd.read_csv('../../../data/trial_2/home_priority.csv')\n",
+    "date_time_group = pd.read_csv('../../../data/trial_2/date_time_group.csv')"
    ]
   },
   {
@@ -84,7 +84,7 @@
        "      <td>early morning</td>\n",
        "      <td>6</td>\n",
        "      <td>24</td>\n",
-       "      <td>1880.0</td>\n",
+       "      <td>1527.609375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -97,7 +97,7 @@
        "      <td>early morning</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1880.0</td>\n",
+       "      <td>1526.191406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -110,7 +110,7 @@
        "      <td>morning</td>\n",
        "      <td>13</td>\n",
        "      <td>38</td>\n",
-       "      <td>1304.0</td>\n",
+       "      <td>1540.515625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -123,7 +123,7 @@
        "      <td>morning</td>\n",
        "      <td>14</td>\n",
        "      <td>7</td>\n",
-       "      <td>1766.0</td>\n",
+       "      <td>1523.480469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -136,7 +136,7 @@
        "      <td>morning</td>\n",
        "      <td>10</td>\n",
        "      <td>26</td>\n",
-       "      <td>1702.0</td>\n",
+       "      <td>1554.679688</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,12 +150,12 @@
        "3     AC   100         cold  2018-01-01  09:00:00  10:00:00        morning   \n",
        "4     AC   100      low hot  2018-01-01  09:00:00  10:00:00        morning   \n",
        "\n",
-       "   no_of_people  time_stayed_mins   power  \n",
-       "0             6                24  1880.0  \n",
-       "1             0                 0  1880.0  \n",
-       "2            13                38  1304.0  \n",
-       "3            14                 7  1766.0  \n",
-       "4            10                26  1702.0  "
+       "   no_of_people  time_stayed_mins        power  \n",
+       "0             6                24  1527.609375  \n",
+       "1             0                 0  1526.191406  \n",
+       "2            13                38  1540.515625  \n",
+       "3            14                 7  1523.480469  \n",
+       "4            10                26  1554.679688  "
       ]
      },
      "execution_count": 3,
@@ -474,7 +474,7 @@
        "      <td>midnight</td>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
-       "      <td>294.0</td>\n",
+       "      <td>273.914062</td>\n",
        "      <td>229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -488,7 +488,7 @@
        "      <td>midnight</td>\n",
        "      <td>6</td>\n",
        "      <td>31</td>\n",
-       "      <td>284.0</td>\n",
+       "      <td>282.250000</td>\n",
        "      <td>229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -502,7 +502,7 @@
        "      <td>midnight</td>\n",
        "      <td>7</td>\n",
        "      <td>27</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>270.828125</td>\n",
        "      <td>241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -516,7 +516,7 @@
        "      <td>midnight</td>\n",
        "      <td>13</td>\n",
        "      <td>56</td>\n",
-       "      <td>264.0</td>\n",
+       "      <td>222.601562</td>\n",
        "      <td>253</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -530,7 +530,7 @@
        "      <td>midnight</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>143.0</td>\n",
+       "      <td>216.167969</td>\n",
        "      <td>253</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -544,7 +544,7 @@
        "      <td>midnight</td>\n",
        "      <td>13</td>\n",
        "      <td>43</td>\n",
-       "      <td>166.0</td>\n",
+       "      <td>230.953125</td>\n",
        "      <td>265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -558,7 +558,7 @@
        "      <td>midnight</td>\n",
        "      <td>9</td>\n",
        "      <td>47</td>\n",
-       "      <td>153.0</td>\n",
+       "      <td>229.605469</td>\n",
        "      <td>271</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -575,14 +575,14 @@
        "2279  Refridgerator   108          hot  2018-01-14  23:00:00  00:00:00   \n",
        "954   Refridgerator   103     very hot  2018-01-14  23:00:00  00:00:00   \n",
        "\n",
-       "          time  no_of_people  time_stayed_mins  power  priorities  \n",
-       "4923  midnight            10                10  294.0         229  \n",
-       "5207  midnight             6                31  284.0         229  \n",
-       "2001  midnight             7                27  145.0         241  \n",
-       "3061  midnight            13                56  264.0         253  \n",
-       "3823  midnight             0                 0  143.0         253  \n",
-       "2279  midnight            13                43  166.0         265  \n",
-       "954   midnight             9                47  153.0         271  "
+       "          time  no_of_people  time_stayed_mins       power  priorities  \n",
+       "4923  midnight            10                10  273.914062         229  \n",
+       "5207  midnight             6                31  282.250000         229  \n",
+       "2001  midnight             7                27  270.828125         241  \n",
+       "3061  midnight            13                56  222.601562         253  \n",
+       "3823  midnight             0                 0  216.167969         253  \n",
+       "2279  midnight            13                43  230.953125         265  \n",
+       "954   midnight             9                47  229.605469         271  "
       ]
      },
      "execution_count": 9,
@@ -604,7 +604,7 @@
     "df_home_data_test['action'] = actions\n",
     "df_home_data_test['savings'] = savings\n",
     "\n",
-    "df_home_data_test.to_csv('../../data/trial_2/final_output_dt.csv', index=False)"
+    "df_home_data_test.to_csv('../../../data/trial_2/final_output_mlr.csv', index=False)"
    ]
   }
  ],
