--- a/main/experiment/trial_3/trial_rf_3.ipynb
+++ b/main/experiment/trial_3/trial_rf_3.ipynb
@@ -29,9 +29,9 @@
    "outputs": [],
    "source": [
     "# Import Dataset\n",
-    "df_home_data_test = pd.read_csv('../../data/trial_3/home_data_predict_mlr.csv')\n",
-    "df_home_priority = pd.read_csv('../../data/trial_3/home_priority.csv')\n",
-    "date_time_group = pd.read_csv('../../data/trial_3/date_time_group.csv')"
+    "df_home_data_test = pd.read_csv('../../../data/trial_3/home_data_predict_rf.csv')\n",
+    "df_home_priority = pd.read_csv('../../../data/trial_3/home_priority.csv')\n",
+    "date_time_group = pd.read_csv('../../../data/trial_3/date_time_group.csv')"
    ]
   },
   {
@@ -84,7 +84,7 @@
        "      <td>midnight</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>1539.078125</td>\n",
+       "      <td>1505.136667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -97,7 +97,7 @@
        "      <td>midnight</td>\n",
        "      <td>4</td>\n",
        "      <td>54</td>\n",
-       "      <td>1522.433594</td>\n",
+       "      <td>1467.080000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -110,7 +110,7 @@
        "      <td>early morning</td>\n",
        "      <td>6</td>\n",
        "      <td>51</td>\n",
-       "      <td>1510.933594</td>\n",
+       "      <td>1623.166667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -123,7 +123,7 @@
        "      <td>morning</td>\n",
        "      <td>10</td>\n",
        "      <td>23</td>\n",
-       "      <td>1508.851562</td>\n",
+       "      <td>1566.963333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -136,7 +136,7 @@
        "      <td>afternoon</td>\n",
        "      <td>14</td>\n",
        "      <td>39</td>\n",
-       "      <td>1511.828125</td>\n",
+       "      <td>1539.410000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,11 +151,11 @@
        "4     AC   100     low cold  2018-01-01  14:00:00  15:00:00      afternoon   \n",
        "\n",
        "   no_of_people  time_stayed_mins        power  \n",
-       "0             4                 4  1539.078125  \n",
-       "1             4                54  1522.433594  \n",
-       "2             6                51  1510.933594  \n",
-       "3            10                23  1508.851562  \n",
-       "4            14                39  1511.828125  "
+       "0             4                 4  1505.136667  \n",
+       "1             4                54  1467.080000  \n",
+       "2             6                51  1623.166667  \n",
+       "3            10                23  1566.963333  \n",
+       "4            14                39  1539.410000  "
       ]
      },
      "execution_count": 3,
@@ -474,7 +474,7 @@
        "      <td>night</td>\n",
        "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>294.218750</td>\n",
+       "      <td>249.176667</td>\n",
        "      <td>204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -488,7 +488,7 @@
        "      <td>night</td>\n",
        "      <td>11</td>\n",
        "      <td>33</td>\n",
-       "      <td>283.558594</td>\n",
+       "      <td>246.646667</td>\n",
        "      <td>234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -502,7 +502,7 @@
        "      <td>night</td>\n",
        "      <td>14</td>\n",
        "      <td>40</td>\n",
-       "      <td>243.480469</td>\n",
+       "      <td>196.930000</td>\n",
        "      <td>246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -516,7 +516,7 @@
        "      <td>night</td>\n",
        "      <td>9</td>\n",
        "      <td>47</td>\n",
-       "      <td>214.023438</td>\n",
+       "      <td>213.706667</td>\n",
        "      <td>252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -530,7 +530,7 @@
        "      <td>night</td>\n",
        "      <td>4</td>\n",
        "      <td>22</td>\n",
-       "      <td>239.757812</td>\n",
+       "      <td>219.990000</td>\n",
        "      <td>252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -544,7 +544,7 @@
        "      <td>night</td>\n",
        "      <td>10</td>\n",
        "      <td>20</td>\n",
-       "      <td>220.460938</td>\n",
+       "      <td>220.846667</td>\n",
        "      <td>252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -558,7 +558,7 @@
        "      <td>night</td>\n",
        "      <td>9</td>\n",
        "      <td>47</td>\n",
-       "      <td>238.585938</td>\n",
+       "      <td>198.046667</td>\n",
        "      <td>258</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -576,13 +576,13 @@
        "1540  Refridgerator   105      low hot  2018-01-14  21:00:00  22:00:00  night   \n",
        "\n",
        "      no_of_people  time_stayed_mins       power  priorities  \n",
-       "5207             4                 3  294.218750         204  \n",
-       "4133            11                33  283.558594         234  \n",
-       "193             14                40  243.480469         246  \n",
-       "3554             9                47  214.023438         252  \n",
-       "192              4                22  239.757812         252  \n",
-       "2541            10                20  220.460938         252  \n",
-       "1540             9                47  238.585938         258  "
+       "5207             4                 3  249.176667         204  \n",
+       "4133            11                33  246.646667         234  \n",
+       "193             14                40  196.930000         246  \n",
+       "3554             9                47  213.706667         252  \n",
+       "192              4                22  219.990000         252  \n",
+       "2541            10                20  220.846667         252  \n",
+       "1540             9                47  198.046667         258  "
       ]
      },
      "execution_count": 9,
@@ -604,7 +604,7 @@
     "df_home_data_test['action'] = actions\n",
     "df_home_data_test['savings'] = savings\n",
     "\n",
-    "df_home_data_test.to_csv('../../data/trial_3/final_output_mlr.csv', index=False)"
+    "df_home_data_test.to_csv('../../../data/trial_3/final_output_rf.csv', index=False)"
    ]
   }
  ],
